# Orc

./: .gitignore  CMakeLists.txt  Rakefile  main.lua  package.json
assets/: .gitkeep  basic.fragmentshader  basic.vertexshader
lib/: .gitkeep
scripts/: .gitkeep  setupDevEnv
src/: bootstrap.lua  main.c  main.cpp  main.lua
src/graphics/: OpenGL.lua
